discussion/kv_engine/169978/169978_rev6_discussion.txt
======================================================================================================================
DESCRIPTION:

WIP - try to remove MetaRead and ReadSeqno

Change-Id: If991e61073cec1f9049454a7be364080a25e13d0

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2022-02-03 21:40:36.000000000
Message: 
Uploaded patch set 6.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2022-02-03 22:07:28.000000000
Message: 
Patch Set 6: Verified-1 Code-Review-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15328/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:793:5: error: no matching function for call to "CmpHelperSTREQ" [clang-diagnostic-error]
    EXPECT_STREQ(decompressValue(producers.last_value), value);
    ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:2113:23: note: expanded from macro "EXPECT_STREQ"
  EXPECT_PRED_FORMAT2(::testing::internal::CmpHelperSTREQ, s1, s2)
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:164:23: note: expanded from macro "EXPECT_PRED_FORMAT2"
  GTEST_PRED_FORMAT2_(pred_format, v1, v2, GTEST_NONFATAL_FAILURE_)
                      ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:149:17: note: expanded from macro "GTEST_PRED_FORMAT2_"
  GTEST_ASSERT_(pred_format(#v1, #v2, v1, v2), \
                ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest_pred_impl.h:77:52: note: expanded from macro "GTEST_ASSERT_"
  if (const ::testing::AssertionResult gtest_ar = (expression)) \
                                                   ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:1639:28: note: candidate function not viable: no known conversion from "std::string" (aka "basic_string<char>") to "const char *" for 3rd argument
GTEST_API_ AssertionResult CmpHelperSTREQ(const char* s1_expression,
                           ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/build-kv_engine-clang-tidy/tlm/deps/googletest.exploded/include/gtest/gtest.h:1672:28: note: candidate function not viable: no known conversion from "std::string" (aka "basic_string<char>") to "const wchar_t *" for 3rd argument
GTEST_API_ AssertionResult CmpHelperSTREQ(const char* s1_expression,
                           ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15328/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/tests/module_tests/dcp_test.cc:793:5:
error: no matching function for call to "CmpHelperSTREQ" [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/15328/ )

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43576/ : FAILURE

Compile error at ..\kv_engine\engines\ep\tests\module_tests\dcp_test.cc(793): error C2665: "testing::internal::CmpHelperSTREQ": none of the 2 overloads could convert all the argument types ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/43576/ )

http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4976/ : FAILURE

Compile error at [2022-02-03T21:53:56.220Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:793:5:
error: no matching function for call to "CmpHelperSTREQ"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.libFuzzer/job/master/4976/ )

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18103/ : FAILURE

Compile error at [2022-02-03T21:54:19.969Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:793:5:
error: no matching function for call to "CmpHelperSTREQ"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/18103/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16145/ : FAILURE

Compile error at [2022-02-03T21:58:03.470Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:793:5:
error: no matching function for call to "CmpHelperSTREQ"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/16145/ )

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25458/ : FAILURE

Compile error at [2022-02-03T21:56:35.678Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:793:5:
error: no matching function for call to "CmpHelperSTREQ"
 ( http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/25458/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17052/ : FAILURE

Compile error at [2022-02-03T21:55:33.373Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:793:5:
error: no matching function for call to ?CmpHelperSTREQ(const char [38], const char [6], std::string, std::string&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/17052/ )

http://cv.jenkins.couchbase.com/job/kv_engine.aarch64-linux/job/master/5036/ : FAILURE

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17362/ : FAILURE

Compile error at [2022-02-03T21:59:26.453Z] ../kv_engine/engines/ep/tests/module_tests/dcp_test.cc:793:5:
error: no matching function for call to ?CmpHelperSTREQ(const char [38], const char [6], std::string, std::string&)?
 ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/17362/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/14171/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/36773/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
